<resources>
    <string name="app_name">Buzzinga</string>

    <string name="subtitle">Quantify the Social</string>
    <string-array name="track_keywords" translatable="false"></string-array>
    <string name="title_section1">Search</string>
    <string name="title_section2">Facebook</string>
    <string name="title_section3">Google +</string>

    <string name="buzz_contact">Buzzinga Contactus</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_example">Example action</string>

    <string name="action_settings">Settings</string>

    <string-array name="sourecselection">
        <item>news_sourcetype_manual_parent</item>
        <item>blogs_sourcetype_manual_parent</item>
        <item>forums_sourcetype_manual_parent</item>
        <item>twitter_search_sourcetype_manual</item>
        <item>fbpages_sourcetype_manual</item>
        <item>googleplus_search_sourcetype_manual</item>
        <item>youtube_search_sourcetype_manual</item>
        <item>instagram_search_sourcetype_manual</item>
        <item>flickr_search_sourcetype_manual</item>
        <item>linkedin_search_sourcetype_manual</item>
        <item>instagram_search_sourcetype_manual</item>
        <item>tumblr_search_sourcetype_manual</item>
        <item>quora_sourcetype_manual_parent</item>
    </string-array>

    <string name="missongsearch">Unable search the given keyword</string>
    <string name="Filter">Filter</string>

    <string-array name="filtertitles">
        <item>Sources</item>
        <item>Sentiment</item>
        <item>Gender</item>
        <item>Location</item>
        <item>Language</item>
    </string-array>

    <string-array name="titleimages">
        <!--<item>@drawable/s1</item>
        <item>@drawable/sentiment</item>
        <item>@drawable/gender</item>
        <item>@drawable/location</item>
        <item>@drawable/language</item>-->
    </string-array>


    <string-array name="notify_hours">
        <item>1 hour</item>
        <item>2 hour</item>
        <item>3 hour</item>
        <item>None</item>
    </string-array>

    <string name="clearfilter">Clear Filter</string>
    <string name="applyfilter">Apply Filter</string>
    <string name="search">Search By Keyword</string>
    <string name="loading_text">Loading</string>
    <string name="track">Track</string>
    <string name="keyword">Track your Brand Ex:iphone</string>
    <string name="norecord">Articles Not Found</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="notifyme">Notify me</string>


    <string name="grey">#000000</string>
    <string name="white">#ffffff</string>


    <string name="time_ago_prefix"></string>
    <string name="time_ago_suffix">ago</string>
    <string name="time_ago_seconds">%f sec</string>
    <string name="time_ago_minute">about a minute</string>
    <string name="time_ago_minutes">%d m</string>
    <string name="time_ago_hour">about an hour</string>
    <string name="time_ago_hours">%d h</string>
    <string name="time_ago_day">a day</string>
    <string name="time_ago_days">%d days</string>
    <string name="time_ago_month">about a month</string>
    <string name="time_ago_months">%d months</string>
    <string name="time_ago_year">about a year</string>
    <string name="time_ago_years">%d years</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="twitter_consumer_key">nwdQpLxZaHNtrW1w63MTM0eRw</string>
    <string name="twitter_consumer_secret">eK5nPRmEHNZZ8LEybyZlK9dih9FyIKZzsmnOk07lVE3kSZZbPo</string>

    <string name="twitter_status_fmt">Twitter User: %s</string>
    <string name="twitter_title_text">Twitter Login</string>

    <string name="firebase_status_fmt">Firebase User: %s</string>

    <string name="app_code">YOUR_APP_CODE</string>
    <string name="deep_link_firebase">https://sh6q4.app.goo.gl/jdF1</string>

    <string name="mobile_title">Mobile</string>
    <string name="mobile_no">+91 - 96323 06600</string>
    <string name="email_title">E-Mail</string>
    <string name="contatct_email">sales＠buzzinga․com</string>
    <string name="location_title">Location</string>
    <string name="location">Buzzinga,\n
     3rd Floor, 4, 80 Feet Main Road,\n
     S T Bed Layout, Koramangala,\n
     Bengaluru, Karnataka 560034
    </string>

    <string name="call_permission_error">Call Permission Denied</string>
    <string name="nav_header_title">Buzzinga</string>

    <string name="login_text"><font color="#1DA1F2">Monitor </font><b>+</b><font color="#1DA1F2"> Analyze </font><b>=</b><font color="#1DA1F2"> Report</font></string>


</resources>
