<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context="in.headrun.buzzinga.activities.Contact_Activiy">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/app_bar"
        android:layout_width="match_parent"
        android:layout_height="180dp"
        android:fitsSystemWindows="true"
        android:theme="@style/AppTheme.AppBarOverlay">

        <android.support.design.widget.CollapsingToolbarLayout
            android:id="@+id/collapse_toolbar_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fitsSystemWindows="true"
            app:contentScrim="?attr/colorPrimary"
            app:layout_scrollFlags="scroll|exitUntilCollapsed">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal|center_vertical"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/imageView"
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:layout_gravity="center_horizontal"
                    android:src="@drawable/app_logo" />

                <!--<TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:gravity="center"
                    android:paddingTop="@dimen/nav_header_vertical_spacing"
                    android:text="Buzzinga"
                    android:textAppearance="@style/TextAppearance.AppCompat.Light.SearchResult.Title" />-->
            </LinearLayout>

            <android.support.v7.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:layout_collapseMode="pin"
                app:popupTheme="@style/AppTheme.PopupOverlay" />

        </android.support.design.widget.CollapsingToolbarLayout>
    </android.support.design.widget.AppBarLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <RelativeLayout
            android:id="@+id/mobile_lay"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="16dp">

            <ImageView
                android:id="@+id/mobile_img"
                android:layout_width="40dp"
                android:layout_height="wrap_content"
                android:layout_marginRight="16dp"
                android:src="@drawable/call_blue" />

            <LinearLayout
                android:id="@+id/mobile_details_lay"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@+id/mobile_img"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/mobile_value"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="Roboto Regular"
                    android:text="@string/mobile_no"
                    android:textAppearance="?attr/textAppearanceListItem"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/mobile_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="Roboto Regular"
                    android:text="@string/mobile_title"
                    android:textSize="14sp"
                    android:textStyle="bold" />

            </LinearLayout>


        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/email_lay"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="16dp">

            <ImageView
                android:id="@+id/email_img"
                android:layout_width="40dp"
                android:layout_height="wrap_content"
                android:layout_marginRight="16dp"
                android:src="@drawable/mail_blue" />

            <LinearLayout
                android:id="@+id/email_details_lay"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@+id/email_img"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/email_value"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="Roboto Regular"
                    android:text="@string/contatct_email"
                    android:textAppearance="?attr/textAppearanceListItem"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/email_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="Roboto Regular"
                    android:text="@string/email_title"
                    android:textSize="14sp"
                    android:textStyle="bold" />

            </LinearLayout>

        </RelativeLayout>


        <RelativeLayout
            android:id="@+id/date_lay"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="16dp">

            <ImageView
                android:id="@+id/loc_img"
                android:layout_width="40dp"
                android:layout_height="wrap_content"
                android:layout_marginRight="16dp"
                android:src="@drawable/loc_blue" />

            <LinearLayout
                android:id="@+id/date_details_lay"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@+id/loc_img"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/date_value"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="Roboto Regular"
                    android:text="@string/location"

                    android:textSize="16sp"
                    android:textStyle="bold" />
                <!--
                                <TextView
                                    android:id="@+id/date_title"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:fontFamily="Roboto Regular"
                                    android:text="@string/location_title"
                                    android:textSize="14sp"
                                    android:textStyle="bold" />-->


            </LinearLayout>

        </RelativeLayout>


    </LinearLayout>

    <!-- <android.support.design.widget.FloatingActionButton
         android:id="@+id/fab"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_margin="@dimen/fab_margin"
         android:src="@android:drawable/ic_dialog_email"
         app:layout_anchor="@id/app_bar"
         app:layout_anchorGravity="bottom|end" />
 -->
</android.support.design.widget.CoordinatorLayout>
